refactor: architectural hardening and persistence consolidation
Phase 2-4 Implementation: Data Flow & Persistence Fixes, Code Quality, and Security

- Remove dual-write anti-pattern: eliminate parallel in-memory state by refactoring all ingestion and export flows to use PersistenceService as single source of truth
  * IngestionService now persists exclusively via JPA
  * FileExportService streams from database, eliminating OOM risk
  * RecordsController updated to fetch from persisted storage

- Fix module dependencies and remove dead code
  * Remove module-06-streaming-kafka from reactor build
  * Remove StorageConfig and DistributedLockService stubs
  * Remove duplicate GlobalExceptionHandler from module-07-api/exception/
  * Consolidate persistence layer to JPA-only (remove JDBC repository)

- Add production security hardening
  * Add Spring Security API key validation filter (SecurityConfig)
  * Add AsyncConfig for concurrent request handling
  * Add JacksonConfig with XXE protection for XML parsing

- Upgrade infrastructure
  * Replace H2 with PostgreSQL in docker-compose
  * Update application.yml to configure PostgreSQL connection
  * Add PostgreSQL driver runtime dependency

- Fix missing dependencies
  * Add Lombok to module-05-analytics and monolith modules
  * Ensure all modules have required Spring dependencies

- Update tests
  * Refactor FileExportServiceTest to use PersistenceService mocks instead of InMemoryStorageService
  * Tests now validate persistence-based export flows

Build: All 11 modules compile and test successfully
- 95+ tests passing
- No compilation errors